# Online-trading-network-platform

./: README.md  manage.py  pyproject.toml
core/: admin.py  models.py  urls.py
core/migrations/: 0001_initial.py  0002_alter_privatebusinessman_arrears_over_provider_and_more.py  0003_alter_storage_arrears_over_provider.py  0004_alter_storage_arrears_over_provider.py  0005_alter_storage_arrears_over_provider.py
core/serializers/: contacts.py  factory.py  privatebusinessman.py  products.py  retail.py  storage.py
core/views/: contacts.py  factory.py  privatebusinessman.py  products.py  retail.py  storage.py
test_work_1/: asgi.py  settings.py  wsgi.py
